feat: di-container feature add restful