@@ -1,15 +1,10 @@
 package com.time.tdd.di.container;
 
-import com.time.tdd.di.container.InjectionTest.ConstructorInjection.Injection.InjectConstructor;
-import com.time.tdd.di.container.exceptions.CyclicDependenciesFoundException;
-import com.time.tdd.di.container.exceptions.DependencyNotFoundException;
-import com.time.tdd.di.container.exceptions.IllegalComponentException;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 import jakarta.inject.Inject;
@@ -22,10 +17,10 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
-import org.mockito.internal.util.collections.Sets;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNotSame;
 import static org.junit.jupiter.api.Assertions.assertSame;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -35,83 +30,91 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
  * @author XuJian
  * @date 2023-03-01 22:20
  **/
-public class ContextTest {
 
-    ContextConfig config;
-    TestComponent instance = new TestComponent() {
-    };
+@Nested
+class ContextTest {
 
-    Dependency dependency = new Dependency() {
-    };
-
+    TestComponent instance;
+    Dependency dependency;
+    private ContextConfig config;
 
     @BeforeEach
-    public void setup() {
+    void setUp() {
         config = new ContextConfig();
+        instance = new TestComponent() {
+        };
+        dependency = new Dependency() {
+        };
     }
 
 
     @Nested
-    class TypeBinding {
-        static Stream<Arguments> should_bind_type_to_an_injectable_component() {
-            return Stream.of(Arguments.of(Named.of("Constructor Injection", TypeBinding.ConstructorInjection.class)),
-                Arguments.of(Named.of("Field Injection", TypeBinding.FieldInjection.class)),
-                Arguments.of(Named.of("Method Injection", TypeBinding.MethodInjection.class)));
+    class TypeBindingTest {
+        public static Stream<Arguments> should_bind_type_an_injectable_component() {
+            return Stream.of(Arguments.of(Named.of("Constructor Injection", ConstructionInjection.class)),
+                Arguments.of(Named.of("Field Injection", FiledInjection.class)),
+                Arguments.of(Named.of("Method Injection", MethodInjection.class)));
         }
 
         @Test
-        void should_bind_type_to_a_specific_instance() {
-            config.bind(TestComponent.class, instance);
+        void should_bind_type_a_specific_instance() {
 
-            Context context = config.getContext();
-            assertSame(instance, context.get(ComponentRef.of(TestComponent.class)).get());
-
+            config.instance(TestComponent.class, instance);
+            assertSame(instance, config.getContext().get(ComponentRef.of(TestComponent.class)).get());
         }
 
         @ParameterizedTest(name = "supporting {0}")
         @MethodSource
-        void should_bind_type_to_an_injectable_component(Class<? extends TestComponent> componentType) {
-            config.bind(Dependency.class, dependency);
-            config.bind(TestComponent.class, componentType);
-
+        void should_bind_type_an_injectable_component(Class<? extends TestComponent> componentType) {
+            config.instance(Dependency.class, dependency);
+            config.component(TestComponent.class, componentType);
             Optional<TestComponent> component = config.getContext().get(ComponentRef.of(TestComponent.class));
-
             assertTrue(component.isPresent());
             assertSame(dependency, component.get().dependency());
         }
 
         @Test
-        void should_return_empty_if_component_not_defined() {
-            Context context = config.getContext();
-            Optional component = context.get(ComponentRef.of(TestComponent.class));
-            assertTrue(component.isEmpty());
+        void should_return_empty_if_component_does_not_exist() {
+            assertTrue(config.getContext().get(ComponentRef.of(TestComponent.class)).isEmpty());
         }
 
         @Test
         void should_retrieve_bind_type_as_provider() {
-            config.bind(TestComponent.class, instance);
-            Context context = config.getContext();
-            Provider<TestComponent> provider = context.get(new ComponentRef<Provider<TestComponent>>() {
+            config.instance(TestComponent.class, instance);
+
+            Provider<TestComponent> provider = config.getContext().get(new ComponentRef<Provider<TestComponent>>() {
             }).get();
             assertSame(instance, provider.get());
         }
 
         @Test
         void should_not_retrieve_bind_type_as_unsupported_container() {
-            config.bind(TestComponent.class, instance);
-            Context context = config.getContext();
+            config.instance(TestComponent.class, instance);
 
-            assertFalse(context.get(new ComponentRef<List<TestComponent>>() {
+
+            assertFalse(config.getContext().get(new ComponentRef<List<TestComponent>>() {
             }).isPresent());
         }
 
+        @Test
+        void should_throw_exception_if_bind_duplicate_component_by_instance() {
+            config.instance(TestComponent.class, instance);
+            TestComponent another = new TestComponent() {
+            };
+            assertThrows(ContextConfig.ContextConfigException.class, () -> config.instance(TestComponent.class, another));
+        }
 
-        static class ConstructorInjection implements TestComponent {
+        @Test
+        void should_throw_exception_if_bind_duplicate_component_by_component() {
+            config.component(TestComponent.class, ConstructionInjection.class);
+            assertThrows(ContextConfig.ContextConfigException.class, () -> config.component(TestComponent.class, MethodInjection.class));
+        }
 
+        static class ConstructionInjection implements TestComponent {
             private Dependency dependency;
 
             @Inject
-            public ConstructorInjection(Dependency dependency) {
+            public ConstructionInjection(Dependency dependency) {
                 this.dependency = dependency;
             }
 
@@ -121,7 +124,7 @@ public class ContextTest {
             }
         }
 
-        static class FieldInjection implements TestComponent {
+        static class FiledInjection implements TestComponent {
             @Inject
             Dependency dependency;
 
@@ -135,9 +138,10 @@ public class ContextTest {
             private Dependency dependency;
 
             @Inject
-            void install(Dependency dependency) {
+            public void install(Dependency dependency) {
                 this.dependency = dependency;
             }
+
 
             @Override
             public Dependency dependency() {
@@ -149,175 +153,199 @@ public class ContextTest {
         class WithQualifier {
             @Test
             void should_bind_instance_with_multi_qualifiers() {
-                config.bind(TestComponent.class, instance, new NamedLiteral("ChoseOne"), new SkywalkerLiteral());
 
-                Context context = config.getContext();
-                TestComponent choseOne = context.get(ComponentRef.of(TestComponent.class, new NamedLiteral("ChoseOne"))).get();
-                TestComponent skywalker = context.get(ComponentRef.of(TestComponent.class, new SkywalkerLiteral())).get();
-
-                assertSame(instance, choseOne);
+                config.instance(TestComponent.class, instance, new NamedLiteral("ChosenOne"), new SkywalkerLiteral());
+                TestComponent chosenOne =
+                    config.getContext().get(ComponentRef.of(TestComponent.class, new NamedLiteral("ChosenOne"))).get();
+                TestComponent skywalker = config.getContext().get(ComponentRef.of(TestComponent.class, new SkywalkerLiteral())).get();
+                assertSame(instance, chosenOne);
                 assertSame(instance, skywalker);
             }
 
+
             @Test
             void should_bind_component_with_multi_qualifiers() {
-                config.bind(Dependency.class, dependency);
-                config.bind(InjectConstructor.class, InjectConstructor.class, new NamedLiteral("ChoseOne"), new SkywalkerLiteral());
+                config.instance(Dependency.class, dependency);
+                config.component(TestComponent.class, ConstructionInjection.class, new NamedLiteral("ChosenOne"), new SkywalkerLiteral());
 
-                Context context = config.getContext();
-                InjectConstructor choseOne = context.get(ComponentRef.of(InjectConstructor.class, new NamedLiteral("ChoseOne"))).get();
-                InjectConstructor skywalker = context.get(ComponentRef.of(InjectConstructor.class, new SkywalkerLiteral())).get();
-
-                assertSame(dependency, choseOne.dependency);
-                assertSame(dependency, skywalker.dependency);
+                TestComponent chosenOne =
+                    config.getContext().get(ComponentRef.of(TestComponent.class, new NamedLiteral("ChosenOne"))).get();
+                TestComponent skywalker = config.getContext().get(ComponentRef.of(TestComponent.class, new SkywalkerLiteral())).get();
+                assertSame(dependency, chosenOne.dependency());
+                assertSame(dependency, skywalker.dependency());
             }
 
+            @Test
+            void should_retrieve_bind_type_as_provider() {
+                config.instance(TestComponent.class, instance, new NamedLiteral("ChosenOne"), new SkywalkerLiteral());
+
+                Provider<TestComponent> provider =
+                    config.getContext().get(new ComponentRef<Provider<TestComponent>>(new SkywalkerLiteral()) {
+                    }).get();
+                assertSame(instance, provider.get());
+            }
+
+            @Test
+            void should_retrieve_empty_if_no_matched_qualifiers() {
+                config.instance(TestComponent.class, instance);
+
+                Optional<Provider<TestComponent>> component =
+                    config.getContext().get(new ComponentRef<Provider<TestComponent>>(new SkywalkerLiteral()) {
+                    });
+                assertTrue(component.isEmpty());
+            }
 
             @Test
             void should_throw_exception_if_illegal_qualifier_given_to_instance() {
-                assertThrows(IllegalComponentException.class, () -> config.bind(TestComponent.class, instance, new TestLiteral()));
+                assertThrows(ContextConfig.ContextConfigException.class,
+                    () -> config.instance(TestComponent.class, instance, new TestLiteral()));
             }
 
             @Test
             void should_throw_exception_if_illegal_qualifier_given_to_component() {
-                assertThrows(IllegalComponentException.class,
-                    () -> config.bind(InjectConstructor.class, InjectConstructor.class, new TestLiteral()));
-            }
+                ContextConfig.ContextConfigException exception = assertThrows(ContextConfig.ContextConfigException.class,
+                    () -> config.component(TestComponent.class, InjectionTest.ConstructorInjectionTest.InjectConstructor.class,
+                        new TestLiteral()));
+                assertEquals(
+                    "Unqualified annotations: TestLiteral[] of class com.time.tdd.di.container.InjectionTest$ConstructorInjectionTest$InjectConstructor",
+                    exception.getMessage());
 
-            // TODO: 2023/3/4 Provider
+            }
+        }
+    }
+
+    @Nested
+    class WithScope {
+        @Test
+        void should_not_singleton_scope_by_default() {
+            config.component(TestComponent.class, NotSingleton.class);
+            Context context = config.getContext();
+            assertNotSame(context.get(ComponentRef.of(TestComponent.class)).get(), context.get(ComponentRef.of(TestComponent.class)).get());
+        }
+
+        @Test
+        void should_bind_component_with_customize_scope() {
+            config.scope(Pooled.class, PooledProvider::new);
+            config.component(TestComponent.class, NotSingleton.class, new PooledLiteral());
+            Context context = config.getContext();
+            Set<TestComponent> components =
+                IntStream.range(0, 5).mapToObj(i -> context.get(ComponentRef.of(TestComponent.class)).get()).collect(Collectors.toSet());
+            assertEquals(PooledProvider.MAX, components.size());
+        }
+
+        @Test
+        void should_bind_component_as_singleton_scoped() {
+            config.component(TestComponent.class, NotSingleton.class, new SingletonLiteral());
+            Context context = config.getContext();
+            assertSame(context.get(ComponentRef.of(TestComponent.class)).get(), context.get(ComponentRef.of(TestComponent.class)).get());
+        }
+
+        @Test
+        void should_retrieve_scope_annotation_from_component() {
+            config.component(TestComponent.class, SingletonAnnotated.class);
+            Context context = config.getContext();
+            assertSame(context.get(ComponentRef.of(TestComponent.class)).get(), context.get(ComponentRef.of(TestComponent.class)).get());
+
+        }
+
+        @Test
+        void should_throw_exception_if_multi_scope_provided() {
+            ContextConfig.ContextConfigException exception = assertThrows(ContextConfig.ContextConfigException.class,
+                () -> config.component(TestComponent.class, NotSingleton.class, new SingletonLiteral(), new PooledLiteral()));
+            assertEquals(
+                "Unqualified annotations: SingletonLiteral[] , PooledLiteral[] of class com.time.tdd.di.container.ContextTest$WithScope$NotSingleton",
+                exception.getMessage());
+        }
+
+        @Test
+        void should_throw_exception_if_multi_scope_annotated() {
+            ContextConfig.ContextConfigException exception = assertThrows(ContextConfig.ContextConfigException.class,
+                () -> config.component(TestComponent.class, MultiScopeAnnotation.class));
+            assertEquals(
+                "Unqualified annotations: @jakarta.inject.Singleton() , @com.time.tdd.di.container.Pooled() of class com.time.tdd.di.container.ContextTest$WithScope$MultiScopeAnnotation",
+                exception.getMessage());
+        }
+
+        @Test
+        void should_throw_exception_if_scope_undefined() {
+            ContextConfig.ContextConfigException exception = assertThrows(ContextConfig.ContextConfigException.class,
+                () -> config.component(TestComponent.class, NotSingleton.class, new PooledLiteral()));
+            assertEquals("Unknown scope: interface com.time.tdd.di.container.Pooled",
+                exception.getMessage());
+        }
+
+        static class NotSingleton implements TestComponent {
+        }
+
+        @Singleton
+        static class SingletonScope implements TestComponent {
+        }
+
+        @Singleton
+        static class SingletonAnnotated implements TestComponent {
+        }
+
+        @Singleton
+        @Pooled
+        static class MultiScopeAnnotation implements TestComponent {
+
         }
 
         @Nested
-        class WithScope {
+        class WithQualifier {
+
             @Test
-            void should_not_be_singleton_scope_by_default() {
-                config.bind(NotSingleton.class, NotSingleton.class);
+            void should_not_singleton_scope_by_default() {
+                config.component(TestComponent.class, NotSingleton.class, new SkywalkerLiteral());
                 Context context = config.getContext();
-                assertNotSame(context.get(ComponentRef.of(NotSingleton.class)), context.get(ComponentRef.of(NotSingleton.class)));
+                assertNotSame(context.get(ComponentRef.of(TestComponent.class, new SkywalkerLiteral())).get(),
+                    context.get(ComponentRef.of(TestComponent.class, new SkywalkerLiteral())).get());
             }
+
 
             @Test
             void should_bind_component_as_singleton_scoped() {
-                config.bind(NotSingleton.class, NotSingleton.class, new SingletonLiteral());
-
+                config.component(TestComponent.class, NotSingleton.class, new SingletonLiteral(), new SkywalkerLiteral());
                 Context context = config.getContext();
-
-                assertSame(context.get(ComponentRef.of(NotSingleton.class)).get(), context.get(ComponentRef.of(NotSingleton.class)).get());
+                assertSame(context.get(ComponentRef.of(TestComponent.class, new SkywalkerLiteral())).get(),
+                    context.get(ComponentRef.of(TestComponent.class, new SkywalkerLiteral())).get());
             }
 
             @Test
             void should_retrieve_scope_annotation_from_component() {
-                config.bind(Dependency.class, SingletonAnnotated.class);
-
+                config.component(TestComponent.class, SingletonAnnotated.class, new SkywalkerLiteral());
                 Context context = config.getContext();
-                assertSame(context.get(ComponentRef.of(Dependency.class)).get(),
-                    context.get(ComponentRef.of(Dependency.class)).get());
-            }
-
-            @Test
-            void should_bind_component_as_customize_scope() {
-                config.scope(Pooled.class, PooledProvider::new);
-                config.bind(NotSingleton.class, NotSingleton.class, new PooledLiteral());
-
-                Context context = config.getContext();
-
-                List<NotSingleton> instances =
-                    IntStream.range(0, 5).mapToObj(i -> context.get(ComponentRef.of(NotSingleton.class)).get()).toList();
-
-                assertEquals(PooledProvider.MAX, new HashSet<>(instances).size());
-            }
-
-            @Test
-            void should_throw_exception_if_multi_scope_provider() {
-                assertThrows(IllegalComponentException.class,
-                    () -> config.bind(NotSingleton.class, NotSingleton.class, new SingletonLiteral(), new PooledLiteral()));
-            }
-
-            @Test
-            void should_throw_exception_if_multi_scope_annotated() {
-
-                assertThrows(IllegalComponentException.class, () -> config.bind(MultiScopeAnnotated.class, MultiScopeAnnotated.class));
-            }
-
-
-            @Test
-            void should_throw_exception_if_scope_undefined() {
-                assertThrows(IllegalComponentException.class,
-                    () -> config.bind(NotSingleton.class, NotSingleton.class, new PooledLiteral()));
-            }
-
-
-            @Singleton
-            @Pooled
-            static class MultiScopeAnnotated {
-            }
-
-            static class NotSingleton {
+                assertSame(context.get(ComponentRef.of(TestComponent.class, new SkywalkerLiteral())).get(),
+                    context.get(ComponentRef.of(TestComponent.class, new SkywalkerLiteral())).get());
 
             }
 
-            @Singleton
-            static class SingletonAnnotated implements Dependency {
 
-            }
-
-            @Nested
-            class WithQualifier {
-                @Test
-                void should_not_be_singleton_scope_by_default() {
-                    config.bind(NotSingleton.class, NotSingleton.class, new SkywalkerLiteral());
-                    Context context = config.getContext();
-                    assertNotSame(context.get(ComponentRef.of(NotSingleton.class, new SkywalkerLiteral())),
-                        context.get(ComponentRef.of(
-                            NotSingleton.class, new SkywalkerLiteral())));
-                }
-
-                @Test
-                void should_bind_component_as_singleton_scoped() {
-                    config.bind(NotSingleton.class, NotSingleton.class, new SingletonLiteral(), new SkywalkerLiteral());
-
-                    Context context = config.getContext();
-
-                    assertSame(context.get(ComponentRef.of(NotSingleton.class, new SkywalkerLiteral())).get(),
-                        context.get(ComponentRef.of(NotSingleton.class, new SkywalkerLiteral())).get());
-                }
-
-                @Test
-                void should_retrieve_scope_annotation_from_component() {
-                    config.bind(Dependency.class, SingletonAnnotated.class, new SkywalkerLiteral());
-
-                    Context context = config.getContext();
-                    assertSame(context.get(ComponentRef.of(Dependency.class, new SkywalkerLiteral())).get(),
-                        context.get(ComponentRef.of(Dependency.class, new SkywalkerLiteral())).get());
-                }
-
-            }
         }
 
     }
 
     @Nested
-    class DependencyCheck {
-        static Stream<Arguments> should_throw_exception_if_dependency_not_found() {
-            return Stream.of(Arguments.of(Named.of("Inject Constructor", DependencyCheck.MissingDependencyConstructor.class)),
-                Arguments.of(Named.of("Inject Field", DependencyCheck.MissingDependencyField.class)),
-                Arguments.of(Named.of("Inject Method", DependencyCheck.MissingDependencyMethod.class)),
-                Arguments.of(Named.of("Provider in Inject Constructor", DependencyCheck.MissingDependencyProviderConstructor.class)),
-                Arguments.of(Named.of("Provider in Inject Field", DependencyCheck.MissingDependencyProviderField.class)),
-                Arguments.of(Named.of("Provider in Inject Method", DependencyCheck.MissingDependencyProviderMethod.class)),
+    class DependencyCheckTest {
+
+        public static Stream<Arguments> should_throw_exception_if_dependency_not_found() {
+            return Stream.of(
+                Arguments.of(Named.of("Inject Constructor", MissingDependencyConstructor.class)),
+                Arguments.of(Named.of("Inject Field", MissingDependencyField.class)),
+                Arguments.of(Named.of("Inject Method", MissingDependencyMethod.class)),
+                Arguments.of(Named.of("Provider in Inject Constructor", MissingDependencyProviderConstructor.class)),
+                Arguments.of(Named.of("Provider in Inject Field", MissingDependencyProviderField.class)),
+                Arguments.of(Named.of("Provider in Inject Method", MissingDependencyProviderMethod.class)),
                 Arguments.of(Named.of("Scoped", MissingDependencyScoped.class)),
-                Arguments.of(Named.of("Provider Scoped", MissingDependencyProviderScoped.class))
-            );
+                Arguments.of(Named.of("Provider Scoped", MissingDependencyProviderScoped.class)));
         }
 
-        static Stream<Arguments> should_throw_exception_if_cyclic_dependencies_found() {
+        public static Stream<Arguments> should_throw_exception_if_cycle_dependencies_found() {
             List<Arguments> arguments = new ArrayList<>();
-            for (Named<? extends Class<? extends TestComponent>> component : List.of(
-                Named.of("Inject Constructor", CyclicComponentInjectConstructor.class),
+            for (final Named component : List.of(Named.of("Inject Constructor", CyclicComponentInjectConstructor.class),
                 Named.of("Inject Field", CyclicComponentInjectField.class),
                 Named.of("Inject Method", CyclicComponentInjectMethod.class))) {
-                for (Named<? extends Class<? extends Dependency>> dependency : List.of(
-                    Named.of("Inject Constructor", CyclicDependencyInjectConstructor.class),
+                for (final Named dependency : List.of(Named.of("Inject Constructor", CyclicDependencyInjectConstructor.class),
                     Named.of("Inject Field", CyclicDependencyInjectField.class),
                     Named.of("Inject Method", CyclicDependencyInjectMethod.class))) {
                     arguments.add(Arguments.of(component, dependency));
@@ -326,17 +354,16 @@ public class ContextTest {
             return arguments.stream();
         }
 
-        static Stream<Arguments> should_throw_exception_if_transitive_cyclic_dependencies_found() {
+        public static Stream<Arguments> should_throw_exception_if_transitive_cyclic_dependency() {
             List<Arguments> arguments = new ArrayList<>();
-            for (Named<? extends Class<? extends TestComponent>> component : List.of(
-                Named.of("Inject Constructor", CyclicComponentInjectConstructor.class),
+
+            for (final Named component : List.of(Named.of("Inject Constructor", CyclicComponentInjectConstructor.class),
                 Named.of("Inject Field", CyclicComponentInjectField.class),
                 Named.of("Inject Method", CyclicComponentInjectMethod.class))) {
-                for (Named<? extends Class<? extends Dependency>> dependency : List.of(
-                    Named.of("Inject Constructor", IndirectCyclicDependencyInjectConstructor.class),
+                for (final Named dependency : List.of(Named.of("Inject Constructor", IndirectCyclicDependencyInjectConstructor.class),
                     Named.of("Inject Field", IndirectCyclicDependencyInjectField.class),
                     Named.of("Inject Method", IndirectCyclicDependencyInjectMethod.class))) {
-                    for (Named<? extends Class<? extends AnotherDependency>> anotherDependency : List.of(
+                    for (final Named anotherDependency : List.of(
                         Named.of("Inject Constructor", IndirectCyclicAnotherDependencyInjectConstructor.class),
                         Named.of("Inject Field", IndirectCyclicAnotherDependencyInjectField.class),
                         Named.of("Inject Method", IndirectCyclicAnotherDependencyInjectMethod.class))) {
@@ -349,75 +376,99 @@ public class ContextTest {
 
         @ParameterizedTest
         @MethodSource
-        void should_throw_exception_if_dependency_not_found(Class<? extends TestComponent> component) {
-            config.bind(TestComponent.class, component);
-
-            DependencyNotFoundException exception =
-                assertThrows(DependencyNotFoundException.class, () -> config.getContext());
-
-            assertSame(Dependency.class, exception.getDependency().type());
-            assertSame(TestComponent.class, exception.getComponent().type());
+        void should_throw_exception_if_dependency_not_found(Class<TestComponent> component) {
+            config.component(TestComponent.class, component);
+            assertThrows(ContextConfig.ContextConfigError.class,
+                () -> config.getContext());
         }
 
         @ParameterizedTest(name = "cyclic dependency between {0} and {1}")
         @MethodSource
-        void should_throw_exception_if_cyclic_dependencies_found(Class<? extends TestComponent> component,
-                                                                 Class<? extends Dependency> dependency) {
-            config.bind(TestComponent.class, component);
-            config.bind(Dependency.class, dependency);
-
-            CyclicDependenciesFoundException e =
-                assertThrows(CyclicDependenciesFoundException.class, () -> config.getContext());
-
-            Set<Class<?>> classes = Sets.newSet(e.getComponents());
-            assertEquals(2, classes.size());
-            assertTrue(classes.contains(TestComponent.class));
-            assertTrue(classes.contains(Dependency.class));
+        void should_throw_exception_if_cycle_dependencies_found(Class<TestComponent> component, Class<Dependency> dependency) {
+            config.component(TestComponent.class, component);
+            config.component(Dependency.class, dependency);
+            ContextConfig.ContextConfigError exception = assertThrows(ContextConfig.ContextConfigError.class,
+                () -> config.getContext());
         }
 
-        // A-> B -> C -> A
         @ParameterizedTest(name = "indirect cyclic dependency between {0}, {1} and {2}")
         @MethodSource
-        void should_throw_exception_if_transitive_cyclic_dependencies_found(Class<? extends TestComponent> component,
-                                                                            Class<? extends Dependency> dependency,
-                                                                            Class<? extends AnotherDependency> anotherDependency) {
-            config.bind(TestComponent.class, component);
-            config.bind(Dependency.class, dependency);
-            config.bind(AnotherDependency.class, anotherDependency);
+        void should_throw_exception_if_transitive_cyclic_dependency(Class<TestComponent> component,
+                                                                    Class<Dependency> dependency,
+                                                                    Class<AnotherDependency> anotherDependency) {
+            config.component(TestComponent.class, component);
+            config.component(Dependency.class, dependency);
+            config.component(AnotherDependency.class, anotherDependency);
+            ContextConfig.ContextConfigError exception = assertThrows(ContextConfig.ContextConfigError.class,
+                () -> config.getContext());
 
-            CyclicDependenciesFoundException e =
-                assertThrows(CyclicDependenciesFoundException.class, () -> config.getContext());
-
-            List<Class<?>> components = Arrays.asList(e.getComponents());
-
-            assertEquals(3, components.size());
-            assertTrue(components.contains(TestComponent.class));
-            assertTrue(components.contains(Dependency.class));
-            assertTrue(components.contains(AnotherDependency.class));
+//            List<Class<?>> components = List.of(exception.getComponents());
+//            assertEquals(3, components.size());
+//            assertTrue(components.contains(TestComponent.class));
+//            assertTrue(components.contains(Dependency.class));
+//            assertTrue(components.contains(AnotherDependency.class));
         }
 
         @Test
-        void should_not_throw_exception_if_cyclic_dependency_via_provider() {
-            config.bind(TestComponent.class, CyclicComponentInjectConstructor.class);
-            config.bind(Dependency.class, CyclicDependencyProviderConstructor.class);
-
-            Context context = config.getContext();
-            assertTrue(context.get(ComponentRef.of(TestComponent.class)).isPresent());
+        void should_not_throw_exception_if_cyclic_dependency_via_provider_constructor() {
+            config.component(TestComponent.class, CyclicComponentInjectConstructor.class);
+            config.component(Dependency.class, CyclicDependencyProviderConstructor.class);
+            assertTrue(config.getContext().get(ComponentRef.of(Dependency.class)).isPresent());
         }
 
+        static class MissingDependencyConstructor implements TestComponent {
+            private Dependency dependency;
 
-        // TODO: 2023/3/6 cyclic dependencies with scope
+            @Inject
+            public MissingDependencyConstructor(final Dependency dependency) {
+            }
+        }
+
+        static class MissingDependencyField implements TestComponent {
+            @Inject
+            private Dependency dependency;
+        }
+
+        static class MissingDependencyMethod implements TestComponent {
+            private Dependency dependency;
+
+            @Inject
+            public void install(final Dependency dependency) {
+            }
+        }
+
+        static class MissingDependencyProviderConstructor implements TestComponent {
+            @Inject
+            public MissingDependencyProviderConstructor(Provider<Dependency> dependencyProvider) {
+            }
+        }
+
+        static class MissingDependencyProviderField implements TestComponent {
+            @Inject
+            Provider<Dependency> dependencyProvider;
+        }
+
+        static class MissingDependencyProviderMethod implements TestComponent {
+            @Inject
+            void install(Provider<Dependency> dependencyProvider) {
+
+            }
+        }
 
         @Singleton
         static class MissingDependencyScoped implements TestComponent {
             @Inject
-            Dependency dependency;
+            void install(Dependency dependencyProvider) {
+
+            }
         }
 
         @Singleton
         static class MissingDependencyProviderScoped implements TestComponent {
             @Inject
-            Provider<Dependency> dependency;
+            void install(Provider<Dependency> dependencyProvider) {
+
+            }
         }
 
         static class CyclicComponentInjectConstructor implements TestComponent {
@@ -434,12 +485,14 @@ public class ContextTest {
         static class CyclicComponentInjectMethod implements TestComponent {
             @Inject
             void install(Dependency dependency) {
+
             }
         }
 
         static class CyclicDependencyInjectConstructor implements Dependency {
             @Inject
-            public CyclicDependencyInjectConstructor(TestComponent component) {
+            void CyclicDependencyInjectConstructor(TestComponent component) {
+
             }
         }
 
@@ -488,176 +541,263 @@ public class ContextTest {
             }
         }
 
-        static class MissingDependencyProviderField implements TestComponent {
-            @Inject
-            Provider<Dependency> dependency;
-        }
-
-        static class MissingDependencyProviderMethod implements TestComponent {
-            @Inject
-            public void install(Provider<Dependency> dependency) {
-            }
-        }
-
-        static class MissingDependencyProviderConstructor implements TestComponent {
-            @Inject
-            public MissingDependencyProviderConstructor(Provider<Dependency> dependency) {
-            }
-        }
-
-        static class MissingDependencyConstructor implements TestComponent {
-            @Inject
-            public MissingDependencyConstructor(Dependency dependency) {
-            }
-        }
-
-        static class MissingDependencyField implements TestComponent {
-            @Inject
-            Dependency dependency;
-        }
-
-        static class MissingDependencyMethod implements TestComponent {
-            @Inject
-            void install(Dependency dependency) {
-            }
-        }
-
-        static class DependencyDependedOnAnotherDependency implements Dependency {
-            private AnotherDependency anotherDependency;
-
-            @Inject
-            public DependencyDependedOnAnotherDependency(AnotherDependency anotherDependency) {
-                this.anotherDependency = anotherDependency;
-            }
-        }
-
-        static class AnotherDependencyDependedOnComponent implements AnotherDependency {
-
-            private TestComponent component;
-
-            @Inject
-            public AnotherDependencyDependedOnComponent(TestComponent component) {
-                this.component = component;
-            }
-        }
-
-        static class DependencyDependedOnComponent implements Dependency {
-            private TestComponent component;
-
-            @Inject
-            public DependencyDependedOnComponent(TestComponent component) {
-                this.component = component;
-            }
-        }
-
-        static class ComponentWithInjectConstructor implements TestComponent {
-
-            private Dependency dependency;
-
-            @Inject
-            public ComponentWithInjectConstructor(Dependency dependency) {
-                this.dependency = dependency;
-            }
-
-            public Dependency getDependency() {
-                return dependency;
-            }
-        }
-
         static class CyclicDependencyProviderConstructor implements Dependency {
             @Inject
-            public CyclicDependencyProviderConstructor(Provider<TestComponent> component) {
+            public CyclicDependencyProviderConstructor(Provider<TestComponent> componentProvider) {
             }
         }
 
         @Nested
         class WithQualifier {
+
             static Stream<Arguments> should_throw_exception_if_dependency_with_qualifier_not_found() {
-                return Stream.of(Named.of("Inject Constructor with Qualifier", InjectConstructor.class),
-                    Named.of("Inject Field with Qualifier", InjectField.class),
-                    Named.of("Inject Method with Qualifier", InjectMethod.class),
-                    Named.of("Provider in Inject Constructor with Qualifier", InjectConstructorProvider.class),
-                    Named.of("Provider in Inject Field with Qualifier", InjectFieldProvider.class),
-                    Named.of("Provider in Inject Method with Qualifier", InjectMethodProvider.class)
-                ).map(Arguments::of);
+                return Stream.of(Named.of("Inject Constructor with Qualifier", InjectionConstructor.class),
+                    Named.of("Inject Field with Qualifier", InjectionField.class),
+                    Named.of("Inject Method with Qualifier", InjectionMethod.class),
+                    Named.of("Provider in inject Constructor with Qualifier", InjectionConstructorProvider.class),
+                    Named.of("Provider in inject Field with Qualifier", InjectionFieldProvider.class),
+                    Named.of("Provider in inject Method with Qualifier", InjectionMethodProvider.class)).map(Arguments::of);
+            }
+
+            static Stream<Arguments> should_not_throw_cyclic_dependency_exception_if_component_with_same_type_but_tagged_with_different_qualifier() {
+                List<Arguments> arguments = new ArrayList<>();
+
+                for (Named skywalker : List.of(Named.of("Inject Constructor", SkywalkerInjectConstructor.class),
+                    Named.of("Inject Field", SkywalkerInjectField.class),
+                    Named.of("Inject Method", SkywalkerInjectMethod.class))) {
+                    for (Named noCyclic : List.of(Named.of("Inject Constructor", NoCyclicInjectConstructor.class),
+                        Named.of("Inject Field", NoCyclicInjectField.class),
+                        Named.of("Inject Method", NoCyclicInjectMethod.class))) {
+                        arguments.add(Arguments.of(skywalker, noCyclic));
+                    }
+                }
+                return arguments.stream();
             }
 
             @ParameterizedTest
             @MethodSource
             void should_throw_exception_if_dependency_with_qualifier_not_found(Class<? extends TestComponent> component) {
-                config.bind(Dependency.class, dependency);
-                config.bind(TestComponent.class, component, new NamedLiteral("Owner"));
+                config.instance(Dependency.class, dependency);
+                config.component(TestComponent.class, component, new NamedLiteral("Owner"));
+                assertThrows(ContextConfig.ContextConfigError.class, () -> config.getContext());
 
-                DependencyNotFoundException exception =
-                    assertThrows(DependencyNotFoundException.class, () -> config.getContext());
-
-                assertEquals(new Component(TestComponent.class, new NamedLiteral("Owner")), exception.getComponent());
-                assertEquals(new Component(Dependency.class, new SkywalkerLiteral()), exception.getDependency());
             }
 
-            // A -> @skywalker A -> @Named A(instance0)
-            @Test
-            void should_not_throw_cyclic_exception_if_component_with_same_type_aged_with_different_qualifiers() {
-                config.bind(Dependency.class, dependency, new NamedLiteral("ChoseOne"));
-                config.bind(Dependency.class, SkywalkerDependency.class, new SkywalkerLiteral());
-                config.bind(Dependency.class, NotCyclicDependency.class);
+            @ParameterizedTest(name = "{1} -> @Skywalker({0}) -> @Named(\"ChosenOne\") not cyclic dependencies")
+            @MethodSource
+            void should_not_throw_cyclic_dependency_exception_if_component_with_same_type_but_tagged_with_different_qualifier(
+                Class<? extends Dependency> skywalker,
+                Class<? extends Dependency> noCyclic) {
+                config.instance(Dependency.class, dependency, new NamedLiteral("ChosenOne"));
+                config.component(Dependency.class, skywalker, new SkywalkerLiteral());
+                config.component(Dependency.class, noCyclic);
 
                 assertDoesNotThrow(() -> config.getContext());
             }
 
-
-            static class InjectConstructor {
+            static class InjectionConstructor {
                 @Inject
-                public InjectConstructor(@Skywalker Dependency dependency) {
+                public InjectionConstructor(@Skywalker Dependency dependency) {
                 }
             }
 
-            static class SkywalkerDependency implements Dependency {
+            static class InjectionConstructorProvider {
+                private Provider<Dependency> dependency;
+
                 @Inject
-                public SkywalkerDependency(@jakarta.inject.Named("ChoseOne") Dependency dependency) {
+                public InjectionConstructorProvider(@Skywalker Provider<Dependency> dependency) {
+                    this.dependency = dependency;
                 }
             }
 
-            static class NotCyclicDependency implements Dependency {
-                @Inject
-                public NotCyclicDependency(@Skywalker Dependency dependency) {
-                }
-            }
-
-            static class InjectField implements TestComponent {
-                @Inject
+            static class InjectionField {
                 @Skywalker
+                @Inject
                 Dependency dependency;
             }
 
-            static class InjectMethod implements TestComponent {
-                @Inject
-                void install(@Skywalker Dependency dependency) {
-
-                }
-            }
-
-            static class InjectConstructorProvider implements TestComponent {
-                @Inject
-                public InjectConstructorProvider(@Skywalker Provider<Dependency> dependency) {
-                }
-            }
-
-            static class InjectFieldProvider implements TestComponent {
-                @Inject
+            static class InjectionFieldProvider {
                 @Skywalker
+                @Inject
                 Provider<Dependency> dependency;
             }
 
-            static class InjectMethodProvider implements TestComponent {
+            static class InjectionMethod {
                 @Inject
-                void install(@Skywalker Provider<Dependency> dependency) {
+                void install(@Skywalker Dependency dependency) {
+                }
+            }
+
+            static class InjectionMethodProvider {
+                @Inject
+                void install(@Skywalker Dependency dependency) {
+                }
+            }
+
+            static class SkywalkerInjectConstructor implements Dependency {
+                @Inject
+                public SkywalkerInjectConstructor(@jakarta.inject.Named("ChosenOne") Dependency dependency) {
+                }
+            }
+
+            static class SkywalkerInjectField implements Dependency {
+                @jakarta.inject.Named("ChosenOne")
+                @Inject
+                Dependency dependency;
+            }
+
+            static class SkywalkerInjectMethod implements Dependency {
+                @Inject
+                void install(@jakarta.inject.Named("ChosenOne") Dependency dependency) {
 
                 }
             }
 
+            static class NoCyclicInjectConstructor implements Dependency {
+                @Inject
+                public NoCyclicInjectConstructor(@Skywalker Dependency dependency) {
+                }
+            }
+
+            static class NoCyclicInjectField implements Dependency {
+                @Skywalker
+                @Inject
+                Dependency dependency;
+            }
+
+            static class NoCyclicInjectMethod implements Dependency {
+                @Inject
+                void install(@Skywalker Dependency dependency) {
+                }
+            }
+        }
+    }
+
+    @Nested
+    class DSL {
+        @Test
+        void should_bind_instance_as_its_declaration_type() {
+            Implementation instance = new Implementation();
+            config.from(new Config() {
+                Implementation implementation = instance;
+            });
+            Context context = config.getContext();
+            Implementation implementation = context.get(ComponentRef.of(Implementation.class)).get();
+            assertSame(instance, implementation);
         }
 
-    }
-}
+        @Test
+        void should_bind_component_as_its_own_type() {
+            config.from(new Config() {
+                Implementation implementation;
+            });
+            Context context = config.getContext();
+            assertTrue(context.get(ComponentRef.of(Implementation.class)).isPresent());
+        }
 
+        @Test
+        void should_bind_instance_using_export_type() {
+            Implementation instance = new Implementation();
+            config.from(new Config() {
+                @Export(Api.class)
+                Implementation implementation = instance;
+            });
+
+            Context context = config.getContext();
+            assertSame(instance, context.get(ComponentRef.of(Api.class)).get());
+        }
+
+        @Test
+        void should_bind_component_using_export_type() {
+            config.from(new Config() {
+                @Export(Api.class)
+                Implementation implementation;
+            });
+
+            Context context = config.getContext();
+            assertTrue(context.get(ComponentRef.of(Api.class)).isPresent());
+        }
+
+        @Test
+        void should_bind_instance_with_qualifier() {
+            Implementation instance = new Implementation();
+            config.from(new Config() {
+                @Skywalker
+                Api implementation = instance;
+            });
+
+            Context context = config.getContext();
+            assertSame(instance, context.get(ComponentRef.of(Api.class, new SkywalkerLiteral())).get());
+        }
+
+        @Test
+        void should_bind_instance_with_provider() {
+            Api instance = new Implementation();
+            config.from(new Config() {
+                Api implementation = instance;
+            });
+
+
+            Context context = config.getContext();
+            Provider<Api> provider = context.get(new ComponentRef<Provider<Api>>() {
+            }).get();
+            assertSame(instance, provider.get());
+        }
+
+        @Test
+        void should_bind_instance_with_scope() {
+            Api instance = new Implementation();
+            config.from(new Config() {
+                @Singleton
+                Api implementation = instance;
+            });
+
+            Context context = config.getContext();
+            assertSame(context.get(ComponentRef.of(Api.class)).get(), context.get(ComponentRef.of(Api.class)).get());
+        }
+
+        @Test
+        void should_bind_component_with_qualifier() {
+            config.from(new Config() {
+                @Skywalker
+                Implementation implementation;
+            });
+
+            Context context = config.getContext();
+            assertTrue(context.get(ComponentRef.of(Implementation.class, new SkywalkerLiteral())).isPresent());
+        }
+
+        @Test
+        void should_bind_component_with_provider() {
+            config.from(new Config() {
+                Implementation implementation;
+            });
+
+            Context context = config.getContext();
+            Provider<Implementation> provider = context.get(new ComponentRef<Provider<Implementation>>() {
+            }).get();
+            assertNotNull(provider.get());
+        }
+
+        @Test
+        void should_bind_component_with_scope() {
+            config.from(new Config() {
+                @Singleton
+                Implementation implementation;
+            });
+
+            Context context = config.getContext();
+            assertSame(context.get(ComponentRef.of(Implementation.class)).get(), context.get(ComponentRef.of(Implementation.class)).get());
+        }
+
+        interface Api {
+
+        }
+
+        static class Implementation implements Api {
+
+        }
+    }
+
+
+}
